--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ fadd()
 # Recap
 
 * the code should consist mostly of chained calls
-* never use *if*, *the ternary operator*, *for* or *while*
+* never use *if*, *for*, *while*, *==* or the *ternary* operator
 * use *Optional* everywhere
 * always make your named functions no-arg and have them return anonymous functions that implement the actual logic
 * always use *.parallelStream()* on collections
